criação de uma niva rota para as receitas
