# src/routes/routes.js
@@ -2,7 +2,7 @@ const express = require("express");
 const Router = express.Router();
 const {getUser,createUser,updateUser,deleteUser} = require("../controllers/user.controller.js");
 const {getMeal,createMeal,deleteMeal,updateMeal} = require("../controllers/meal.controller.js");
-const {getAllRevenues,getRevenues,createRevenues,deleteRevenues,updateRevenues} = require("../controllers/revenue.controller.js")
+const {getAllRevenues,getRevenues,createRevenues,deleteRevenues,updateRevenues, getRevenueById} = require("../controllers/revenue.controller.js")
 
 Router.get("/users/get/", getUser);
 Router.post("/users/create/",createUser);
@@ -18,6 +18,7 @@ Router.delete("/meals/delete/:id",deleteMeal);
 
 Router.get("/revenues/get/:preference",getRevenues);
 Router.get("/revenues/get/",getAllRevenues);
+Router.get("/revenues/get/id/:id",getRevenueById);
 Router.post("/revenues/create",createRevenues);
 Router.put("/revenues/update/:id",updateRevenues);
 Router.delete("/revenues/delete/:id",deleteRevenues);
